--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,12 +44,15 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python cv_hw1.py -i circles.jpg -k 4 -m grey
-            python cv_hw1.py -i circles.jpg -k 4 -m rgb
-            python cv_hw1.py -i kenny.JPG -k 2 -m grey
-            python cv_hw1.py -i kenny.JPG -k 2 -m rgb
-            python cv_hw1.py -i fruits.jpg -k 3 -m grey
-            python cv_hw1.py -i fruits.jpg -k 3 -m rgb
+            python cv_hm2.py -i1 1-in000001.jpg -i2 1-in000048.jpg -m TL - t 35 > output_1_tl.txt
+            python cv_hm2.py -i1 1-in000001.jpg -i2 1-in000048.jpg -m RO - t 35 > output_1_ro.txt
+            python cv_hm2.py -i1 1-in000001.jpg -i2 1-in000048.jpg -m GA - t 0.7 > output_1_ga.txt
+            python cv_hm2.py -i1 2-in000001.jpg -i2 2-in001800.jpg -m TL - t 35 > output_2_tl.txt
+            python cv_hm2.py -i1 2-in000001.jpg -i2 2-in001800.jpg -m RO - t 35 > output_2_ro.txt
+            python cv_hm2.py -i1 2-in000001.jpg -i2 2-in001800.jpg -m GA - t 0.7 > output_2_ro.txt
+            python cv_hm2.py -i1 3-in000001.jpg -i2 3-in000500.jpg -m TL - t 35 > output_3_tl.txt
+            python cv_hm2.py -i1 3-in000001.jpg -i2 3-in000500.jpg -m RO - t 35 > output_3_ro.txt
+            python cv_hm2.py -i1 3-in000001.jpg -i2 4-in000500.jpg -m GA - t 0.7 > output_3_ro.txt
             mkdir /home/circleci/repo/test-reports
             mv -f \output/ /home/circleci/repo/test-reports
 
