--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,10 +49,10 @@ jobs:
             python cv_hm2.py -i1 1-in000001.jpg -i2 1-in000048.jpg -m GA -t 0.7 > output/output_1_ga.txt
             python cv_hm2.py -i1 2-in000001.jpg -i2 2-in001800.jpg -m TL -t 35 > output/output_2_tl.txt
             python cv_hm2.py -i1 2-in000001.jpg -i2 2-in001800.jpg -m RO -t 35 > output/output_2_ro.txt
-            python cv_hm2.py -i1 2-in000001.jpg -i2 2-in001800.jpg -m GA -t 0.7 > output/output_2_ro.txt
+            python cv_hm2.py -i1 2-in000001.jpg -i2 2-in001800.jpg -m GA -t 0.7 > output/output_2_ga.txt
             python cv_hm2.py -i1 3-in000001.jpg -i2 3-in000500.jpg -m TL -t 35 > output/output_3_tl.txt
             python cv_hm2.py -i1 3-in000001.jpg -i2 3-in000500.jpg -m RO -t 35 > output/output_3_ro.txt
-            python cv_hm2.py -i1 3-in000001.jpg -i2 4-in000500.jpg -m GA -t 0.7 > output/output_3_ro.txt
+            python cv_hm2.py -i1 3-in000001.jpg -i2 3-in000500.jpg -m GA -t 0.7 > output/output_3_ga.txt
             mkdir /home/circleci/repo/test-reports
             mv -f \output/ /home/circleci/repo/test-reports
 
